Addressed CircleCI Build Failures